--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -5,6 +5,10 @@
 		<link rel='stylesheet' href='/stylesheets/style.css'/>
 	</head>
 	<body>
+		<form method="get" action="/quizes?search=search">
+		    	<input type="text"  name="search">
+ 		 		<input type="submit" value="Buscar" >
+		</form>
 		
 		<table>
 			<% var i; for (i=0; i < quizes.length; i++) { %>
