--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -12,9 +12,15 @@
 		
 		<table>
 			<% var i; for (i=0; i < quizes.length; i++) { %>
-			<tr><td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td></tr> <% } %>
+
+			<tr>
+				<td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
+			</tr> 
+			<% } %>
 		</table><p>
-		<a href="/quizes/new"><button type="button">Crear pregunta</button></a>
+		<a href="/quizes/new"><button">Crear pregunta</button></a>
+		</p>
+
 		
 	</body>
 </html>
