--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -15,9 +15,11 @@
 
 			<tr>
 				<td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
+				<td><a href="quizes/<%= quizes[i].id %>/edit"><button>editar</button></a></td>
 			</tr> 
 			<% } %>
-		</table><p>
+		</table>
+		<p>
 		<a href="/quizes/new"><button">Crear pregunta</button></a>
 		</p>
 
