--- a/views/quizes/edit.ejs
+++ b/views/quizes/edit.ejs
@@ -8,6 +8,7 @@
 	
 Edite la pregunta <p>
 <form method="post" action="/quizes/<%= quiz.id %>?_method=put">
+<% var editado=1 %>
 <% include _form.ejs %>
 </form>
 </p>
