--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -9,7 +9,8 @@
 		    	<input type="text"  name="search">
  		 		<input type="submit" value="Buscar" >
 		</form>
-		
+	
+
 		<table>
 			<tr><th>Pregunta</th><th>Tema</th></tr>
 			<% var i; for (i=0; i < quizes.length; i++) { %>
@@ -28,10 +29,11 @@
 			</tr> 
 			<% } %>
 		</table>
+		
+			
 		<p>
-		<a href="/quizes/new"><button">Crear pregunta</button></a>
+		<a href="/quizes/new"><button>Crear pregunta</button></a>
 		</p>
-
 		
 	</body>
 </html>
