--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -17,6 +17,7 @@
 
 			<tr>
 				<td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
+				<% if (session.user){ %> 
 				<td><%= quizes[i].tema %></a></td>
 				<td><a href="quizes/<%= quizes[i].id %>/edit"><button>editar</button></a></td>
 				<td>
@@ -26,13 +27,16 @@
 						</button>
 					</form>
 				</td>
+				<% } %>
 			</tr> 
 			<% } %>
 		</table>
 		
 			
 		<p>
+		<% if (session.user){ %>
 		<a href="/quizes/new"><button>Crear pregunta</button></a>
+		<% } %>
 		</p>
 		
 	</body>
