--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,4 +10,5 @@ footer 			    { background:#eee;text-align:center;}
 nav span            { margin:0px 10px 0px 0px;}
 
 #ErrorMsgs			{ color:#f61; font.size:smaller;}
- 
+
+table, td,th			{ border: 1px solid #000 ;border-spacing: 0}
