--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -22,6 +22,7 @@
 			<span><a href="/">Inicio</a></span>
 			<span><a href="/quizes">Preguntas</a></span>
 			<span><a href="/quizes/autor">Autor</a></span>
+			<span><a href="/quizes/statistics">Estadisticas</a></span>
 		</nav>
 		
 		<section class="main" id="s1">
